# STC_test_tasks

./: .gitignore  .~lock.tasks_qt_only.docx#  README.txt  tasks_qt_only.docx
Task_DB/: DBEditor_Doxygen  Windows Installer Script.iss  dbeditor.deb  package.deb
Task_DB/DBEditor/: CMakeLists.txt  dbview.cpp  dbview.h  main.cpp  mainwindow.cpp  mainwindow.h
Task_DB/doxygen_doc/: classDBView.html  classMainWindow.html  dbview_8cpp.html  dbview_8h__dep__incl.dot  dbview_8h__incl.dot  dir_d550b29c7acc60c7b3e6a1671e7bfad3.html  files.html  functions.html  graph_legend.html  hierarchy.html  index.html  main_8cpp.html  mainwindow_8cpp__incl.dot  mainwindow_8h.html  mainwindow_8h__incl.dot  mainwindow_8h_source.html
Task_DB/doxygen_doc/search/: all_3.js  all_4.js  all_5.js  files_1.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  functions_7.js  searchdata.js
Task_DB/html/: annotated.html  classDBView-members.html  classDBView__coll__graph.dot  classMainWindow-members.html  classMainWindow__coll__graph.dot  classes.html  dbview_8cpp__incl.dot  dbview_8h.html  dbview_8h_source.html  functions_func.html  inherit_graph_0.dot  inherit_graph_1.dot  inherits.html  main_8cpp__incl.dot  mainwindow_8cpp.html  mainwindow_8h__dep__incl.dot
Task_DB/html/search/: all_0.js  all_1.js  all_2.js  all_6.js  all_7.js  classes_0.js  files_0.js  functions_2.js  functions_3.js  functions_4.js
Task_DB/package/DEBIAN/: control
